--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -25,7 +25,7 @@
             <li class="une-phrase"><div><p><a href="#" rel="une-phrase">En une phrase</a></p></div></li>
             <li class="en-details"><div><p><a href="#" rel="en-details">En détails</a></p></div></li>
             <li class="quel-probleme"><div><p><a href="#" rel="quel-probleme">Quel est le problème ?</a></p></div></li>
-            <li class="dans-la-vraie-vie"><div><p><a href="#" rel="dans-la-vraie-vie">Expliqué dans la vraie vie</a></p></div></li>
+            <li class="dans-la-vraie-vie"><div><p><a href="#" rel="dans-la-vraie-vie">Expliqué dans la vie courante</a></p></div></li>
             <li class="avec-des-poissons"><div><p><a href="#" rel="avec-des-poissons">Expliqué avec des poissons</a></p></div></li>
             <li class="savoir-plus"><div><p><a href="#" rel="savoir-plus">En savoir plus</a></p></div></li>
           </ul>
@@ -152,7 +152,7 @@
             <p class="une-phrase">Les <span>raisons pour lesquelles</span> quelqu'un peut être surveillé. Elles sont nombreuses (et plutôt larges).</p>
             <p class="en-details">Les motifs pour placer quelqu'un sous surveillance ne se limitent pas, loin de là, à la <em>«prévention du terrorisme»</em>. La loi en énumère six autres&nbsp;: <em>«l'indépendance nationale, l'intégrité du territoire et la défense nationale»</em>&nbsp;; <em>«les intérêts majeurs de la politique étrangère et la prévention de toute forme d'ingérence étrangère»</em>&nbsp;; <em>«les intérêts économiques, industriels et scientifiques majeurs de la France»</em>&nbsp;; <em>«la prévention des atteintes à la forme républicaine des institutions, des violences collectives de nature à porter atteinte à la sécurité nationale ou de la reconstitution ou d'actions tendant au maintien de groupements dissous»</em>&nbsp;; <em>«la prévention de la criminalité et de la délinquance organisées»</em>&nbsp;; et enfin <em>«la prévention de la prolifération des armes de destruction massive»</em>.</p>
             <p class="quel-probleme">Beaucoup de parlementaires, à droite comme à gauche, trouvent le périmètre <em>«trop large»</em>, y compris l'UMP Henri Guaino. Pour le centriste Hervé Morin, <em>«les intérêts économiques, industriels et scientifiques majeurs»</em>, c'est <em>«la vie entière»</em>... L'EE-LV Sergio Coronado s'est demandé, lui, si la prévention des <em>«violences collectives de nature à porter atteinte à la sécurité nationale»</em> pourrait motiver la surveillance de manifestants à Notre-Dame-des-Landes ou à Sivens, par exemple.</p>
-            <p class="dans-la-vraie-vie">Les profils</p>
+            <p class="dans-la-vraie-vie">A quels profils correspondent ces <em>"motifs"</em>&nbsp;? A des espions étrangers, des trafiquants d'armes chimiques, des jihadistes, mais aussi des dealers, des chercheurs, des indépendantistes, des zadistes...</p>
             <p class="avec-des-poissons"></p>
           </div>
 
@@ -161,8 +161,8 @@
             <p class="une-phrase">On ne <span>comprend pas tout à fait</span> les missions exactes de cet outil doté d'ordinateurs très puissants.</p>
             <p class="en-details">Le premier à avoir remis le sujet sur le tapis ces dernières semaines est le journal Le Monde. Le PNCD, présenté comme <em>"une Plateforme nationale de cryptage et de décryptement"</em>, serait le Big Brother français. En d'autres termes&nbsp;: <em>«un système complexe et occulte de recueil massif et de stockage de données personnelles étrangères et françaises dans lequel les services de renseignement français puisent à leur guise et sans aucun contrôle autre que leur propre hiérarchie»</em>. L'exécutif a démenti, ou plutot corrigé le tir : le PNCD ne serait pas une plateforme mais un pole, créé en 1999. Selon la DGSE, il est limité à <em>"deux fonctions : chiffrer (crypter) nos communications et déchiffrer (décrypter) celles de nos adversaires"</em>. C'est aussi l'avis du journaliste Jean-Marc Manach. Sur Arret sur Images</p>
             <p class="quel-probleme">Ça n'échappera à personne : il y a d'abord un problème de compréhension. Personne n'est d'accord sur ce fameux Big Brother français. Ensuite, il pose évidemment une série de problèmes légaux. Des organisations de défense des droits humains, la FIDH et la LDH, ont d'ailleurs déposé une plainte visant la DGSE contre cet espionnage massif illégal. Elle a été classée sans suite, ce que les deux ONG contestent.</p>
-            <p class="dans-la-vraie-vie">Big Brother ou pas</p>
-            <p class="avec-des-poissons">Filets immenses ou pas</p>
+            <p class="dans-la-vraie-vie"></p>
+            <p class="avec-des-poissons">Toute la mer est filtrée par de gigantesques filets pour n'attraper que quelques poissons.</p>
           </div>
 
           <div class="pages" id="page-16">
@@ -176,7 +176,7 @@
 
           <div class="pages" id="page-17">
             <h3><span>Services de renseignement</span></h3>
-            <p class="une-phrase">Les services (pas si) secrets.</p>
+            <p class="une-phrase">Les services (<span>pas si</span>) secrets.</p>
             <p class="en-details">La France compte six services de renseignement, désignés par décret : la DGSI (sécurité intérieure), la DGSE (sécurité extérieure), la DPSD (contre-espionnage des armées), la DRM (renseignement militaire), la DNRED (enquêtes douanières) et Tracfin (renseignement financier). Dans le projet de loi, elles sont présentées comme les organisations chargées de <em>«la recherche, la collecte, l'exploitation et la mise à disposition du gouvernement»</em> d'informations qui intéressent la sécurité nationale, la défense et la promotion des intérêts fondamentaux du pays [voir Motifs].</p>
             <p class="quel-probleme"></p>
             <p class="dans-la-vraie-vie"></p>
@@ -188,7 +188,7 @@
             <p class="une-phrase">Pour prévenir le terrorisme, on pioche les renseignements directement et immédiatement sur les réseaux.</p>
             <p class="en-details">Pour la prévention du terrorisme, et pour des suspects déjà identifiés, la pêche aux informations peut être opérée <em>«en temps réel sur les réseaux des opérateurs»</em>, mais aussi ceux des hébergeurs. Le mécanisme n'est donc pas le même que celui des <em>«boîtes noires»</em>, censé opérer sur des données anonymes.</p>
             <p class="quel-probleme">La mesure, qui concerne potentiellement un très grand nombre de données, a inquiété aussi bien la CNIL que la commission de réflexion sur le droit et les libertés à l'ère numérique de l'Assemblée nationale, qui toutes deux se sont interrogées sur le périmètre concerné, et notamment sur l'aspiration de données qui n'auraient rien à voir avec le motif de la surveillance. La première considère avoir eu depuis l'assurance que <em>«de telles opérations ne peuvent porter que sur les données techniques de connexion»</em>. Ce qui est déjà beaucoup [voir Métadonnées]. Reste surtout à voir de quelle manière va s'opérer ce recueil, et quel accès auront les services de renseignement aux réseaux en question.</p>
-            <p class="dans-la-vraie-vie">Flic qui va au centre de tri et qui fait son marché</p>
+            <p class="dans-la-vraie-vie">Dans un centre de tri postal&nbsp;: au lieu de demander aux salariés de la Poste de mettre de côté les courriers jugés suspects, les agent des services de renseignement vont eux-memes sur les chaines de tri et piochent ce qui les intéresse. Un filtre, cleui du postier, a donc disparu.</p>
             <p class="avec-des-poissons"></p>
           </div>
 
@@ -197,16 +197,16 @@
             <p class="une-phrase">Quand la demande ne peut pas attendre, on ne demande à personne son avis, sauf a posteriori.</p>
             <p class="en-details">S'il y a <em>«urgence absolue»</em>, le Premier ministre peut autoriser une mise sous surveillance sans demander l'avis de la commission de contrôle [voir CNCTR], qu'il doit tout de même avertir dans les 24 heures. La procédure est interdite si la surveillance concerne un domicile, ou certaines professions [voir Professions protégées]. En cas de <em>«menace imminente»</em> ou de <em>«risque très élevé de ne pouvoir effectuer l'opération ultérieurement»</em>, les services peuvent même agir de leur propre initiative, et prévenir immédiatement le Premier ministre et la CNCTR.</p>
             <p class="quel-probleme">Pour Jean-Marie Delarue, le président de l'actuelle Commission nationale de contrôle des interceptions de sécurité (CNCIS), un service <em>«peut facilement organiser sa propre urgence absolue»</em>... Le défenseur des droits, Jacques Toubon, est sur la même longueur d'ondes&nbsp;: il souhaite que l'avis préalable de la nouvelle commission soit systématique avant toute mise sous surveillance. Ils ont un argument de poids&nbsp;: jusqu'ici, dans la pratique, la CNCIS a toujours été capable de rendre, si besoin, un avis dans les deux heures.</p>
-            <p class="dans-la-vraie-vie">Flic qui va au centre de tri et qui fait son marché</p>
+            <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
 
-          <div class="pages" id="page-19">
+          <div class="pages" id="page-20">
             <h3><span>Vie privée</span></h3>
             <p class="une-phrase">Le droit fondamental à protéger ce qui relève de notre intimité (à l'inverse de la vie publique).</p>
             <p class="en-details">Le projet de loi le rappelle&nbsp;: le respect de la vie privée, <em>«notamment le secret des correspondances, la protection des données personnelles et l'inviolabilité du domicile, est garanti par la loi»</em>. Il est même garanti par la Convention européenne des droits de l'homme, selon laquelle <em>«toute personne a droit au respect de sa vie privée et familiale, de son domicile et de sa correspondance»</em>. Le Conseil constitutionnel considère qu'il fait partie des libertés fondamentales. Pas le ministre de l'Intérieur, ce qui lui a valu de se voir décerner par le blogueur Maître Eolas le «<em>prix Busiris</em>».</p>
             <p class="quel-probleme">Le respect de la vie privée est la règle&nbsp;; l'atteinte à la vie privée, l'exception. Et une exception doit être très encadrée, justifiée (proportionnelle au but recherché) et contrôlée. C'est tout le débat sur le texte&nbsp;: défenseurs des libertés et magistrats, notamment, considèrent qu'il va beaucoup trop loin.</p>
-            <p class="dans-la-vraie-vie">Tout nu dans la salle de bain</p>
+            <p class="dans-la-vraie-vie"></p>
             <p class="avec-des-poissons"></p>
           </div>
 
