--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -15,8 +15,8 @@
     <body>
 
       <header>
-        <h1>Projet de loi sur le renseignement : un abcdaire pour tout comprendre</h1>
-        <h2>Chapeau</h2>
+        <h1>Loi renseignement : un abcdaire pour tout comprendre</h1>
+        <h2>Le projet de loi est voté ce mardi. Si vous n'avez rien compris, <em>Libération</em> vous explique ce que signifient les termes du débat.</h2>
       </header>
 
       <div class="wrapper">
@@ -25,8 +25,8 @@
             <li class="une-phrase"><div><p><a href="#" rel="une-phrase">En une phrase</a></p></div></li>
             <li class="en-details"><div><p><a href="#" rel="en-details">En détails</a></p></div></li>
             <li class="quel-probleme"><div><p><a href="#" rel="quel-probleme">Quel est le problème ?</a></p></div></li>
-            <li class="dans-la-vraie-vie"><div><p><a href="#" rel="dans-la-vraie-vie">Expliqué dans la vie courante</a></p></div></li>
-            <li class="avec-des-poissons"><div><p><a href="#" rel="avec-des-poissons">Expliqué avec des poissons</a></p></div></li>
+            <li class="dans-la-vraie-vie"><div><p><a href="#" rel="dans-la-vraie-vie">Dans la vie courante</a></p></div></li>
+            <li class="avec-des-poissons"><div><p><a href="#" rel="avec-des-poissons">Expliqué avec la pêche</a></p></div></li>
             <li class="savoir-plus"><div><p><a href="#" rel="savoir-plus">En savoir plus</a></p></div></li>
           </ul>
         </div>
