--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -16,7 +16,7 @@
 
       <header>
         <h1>Loi renseignement : un abcdaire pour tout comprendre</h1>
-        <h2>Le projet de loi est voté ce mardi. Si vous n'avez rien compris, <em>Libération</em> vous explique ce que signifient les termes du débat.</h2>
+        <h2>Le projet de loi est voté ce mardi. Si vous n'avez rien compris, <em>Libération</em> vous explique ce que veulent dire les termes du débat.</h2>
       </header>
 
       <div class="wrapper">
