--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -185,7 +185,7 @@
 
           <div class="pages" id="page-18">
             <h3><span>Temps réel</span></h3>
-            <p class="une-phrase">Pour prévenir le terrorisme, on pioche les renseignements directement et immédiatement sur les réseaux.</p>
+            <p class="une-phrase">Pour prévenir le terrorisme, <span>on pioche les renseignements directement</span> et immédiatement sur les réseaux.</p>
             <p class="en-details">Pour la prévention du terrorisme, et pour des suspects déjà identifiés, la pêche aux informations peut être opérée <em>«en temps réel sur les réseaux des opérateurs»</em>, mais aussi ceux des hébergeurs. Le mécanisme n'est donc pas le même que celui des <em>«boîtes noires»</em>, censé opérer sur des données anonymes.</p>
             <p class="quel-probleme">La mesure, qui concerne potentiellement un très grand nombre de données, a inquiété aussi bien la CNIL que la commission de réflexion sur le droit et les libertés à l'ère numérique de l'Assemblée nationale, qui toutes deux se sont interrogées sur le périmètre concerné, et notamment sur l'aspiration de données qui n'auraient rien à voir avec le motif de la surveillance. La première considère avoir eu depuis l'assurance que <em>«de telles opérations ne peuvent porter que sur les données techniques de connexion»</em>. Ce qui est déjà beaucoup [voir Métadonnées]. Reste surtout à voir de quelle manière va s'opérer ce recueil, et quel accès auront les services de renseignement aux réseaux en question.</p>
             <p class="dans-la-vraie-vie">Dans un centre de tri postal&nbsp;: au lieu de demander aux salariés de la Poste de mettre de côté les courriers jugés suspects, les agent des services de renseignement vont eux-memes sur les chaines de tri et piochent ce qui les intéresse. Un filtre, cleui du postier, a donc disparu.</p>
@@ -194,7 +194,7 @@
 
           <div class="pages" id="page-19">
             <h3><span>Urgence</span></h3>
-            <p class="une-phrase">Quand la demande ne peut pas attendre, on ne demande à personne son avis, sauf a posteriori.</p>
+            <p class="une-phrase">Quand la demande <span>ne peut pas attendre</span>, on ne demande à personne son avis, sauf a posteriori.</p>
             <p class="en-details">S'il y a <em>«urgence absolue»</em>, le Premier ministre peut autoriser une mise sous surveillance sans demander l'avis de la commission de contrôle [voir CNCTR], qu'il doit tout de même avertir dans les 24 heures. La procédure est interdite si la surveillance concerne un domicile, ou certaines professions [voir Professions protégées]. En cas de <em>«menace imminente»</em> ou de <em>«risque très élevé de ne pouvoir effectuer l'opération ultérieurement»</em>, les services peuvent même agir de leur propre initiative, et prévenir immédiatement le Premier ministre et la CNCTR.</p>
             <p class="quel-probleme">Pour Jean-Marie Delarue, le président de l'actuelle Commission nationale de contrôle des interceptions de sécurité (CNCIS), un service <em>«peut facilement organiser sa propre urgence absolue»</em>... Le défenseur des droits, Jacques Toubon, est sur la même longueur d'ondes&nbsp;: il souhaite que l'avis préalable de la nouvelle commission soit systématique avant toute mise sous surveillance. Ils ont un argument de poids&nbsp;: jusqu'ici, dans la pratique, la CNCIS a toujours été capable de rendre, si besoin, un avis dans les deux heures.</p>
             <p class="dans-la-vraie-vie"></p>
@@ -203,7 +203,7 @@
 
           <div class="pages" id="page-20">
             <h3><span>Vie privée</span></h3>
-            <p class="une-phrase">Le droit fondamental à protéger ce qui relève de notre intimité (à l'inverse de la vie publique).</p>
+            <p class="une-phrase">Le droit fondamental à protéger ce qui relève de <span>notre intimité</span> (à l'inverse de la vie publique).</p>
             <p class="en-details">Le projet de loi le rappelle&nbsp;: le respect de la vie privée, <em>«notamment le secret des correspondances, la protection des données personnelles et l'inviolabilité du domicile, est garanti par la loi»</em>. Il est même garanti par la Convention européenne des droits de l'homme, selon laquelle <em>«toute personne a droit au respect de sa vie privée et familiale, de son domicile et de sa correspondance»</em>. Le Conseil constitutionnel considère qu'il fait partie des libertés fondamentales. Pas le ministre de l'Intérieur, ce qui lui a valu de se voir décerner par le blogueur Maître Eolas le «<em>prix Busiris</em>».</p>
             <p class="quel-probleme">Le respect de la vie privée est la règle&nbsp;; l'atteinte à la vie privée, l'exception. Et une exception doit être très encadrée, justifiée (proportionnelle au but recherché) et contrôlée. C'est tout le débat sur le texte&nbsp;: défenseurs des libertés et magistrats, notamment, considèrent qu'il va beaucoup trop loin.</p>
             <p class="dans-la-vraie-vie"></p>
