--- a/pjlr/index.html
+++ b/pjlr/index.html
@@ -35,7 +35,7 @@
 
           <div class="header">
             <h1>Renseignement : exercices de styles pour comprendre la loi</h1>
-            <h2>Le projet de loi est voté ce mardi. Si vous n'avez rien compris, <em>Libération</em> vous explique ce que signifient les termes du débat.</h2>
+            <h2>Le projet de loi a été adopté ce mardi à l'Assemblée Nationale ce mardi. Si vous n'avez rien compris, <em>Libération</em> vous explique ce que signifient les termes du débat.</h2>
           </div>
 
           <div class="pagewrapper">
