--- a/chinese-restaurants/index.html
+++ b/chinese-restaurants/index.html
@@ -5,6 +5,8 @@
 
         <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+        <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+        <script src="https://cdn.rawgit.com/Caged/d3-tip/master/index.js"></script>
 
         <title>Libération.fr – </title>
         <meta name="description" content="Tout savoir sur les dernières actualités politiques, monde, société, sports, écologie avec le journal en ligne Libération.">
@@ -15,8 +17,11 @@
 
         <script src="directives/lheader/lheader.directive.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/histogram.directive.js"></script>
 
         <link rel="stylesheet" type="text/css" href="css/style.css" >
+
+        <link rel="stylesheet" href="//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css">
 
         <link rel="shortcut icon" href="http://s1.libe.com/favicon.ico">
         <link rel="shortcut icon" href="http://s1.libe.com/favicon.png">
@@ -29,6 +34,9 @@
         <lheader></lheader>
 
         <section class="content">
+            <div histogram class="histogram" id="hist1" data="data.china"></div>
+            <div histogram class="histogram" id="hist2" data="data.greece"></div>
+            <div histogram class="histogram" id="hist3" data="data.sushis"></div>
         </section>
 
     <!-- Chartbeat -->
