--- a/chinese-restaurants/index.html
+++ b/chinese-restaurants/index.html
@@ -37,6 +37,8 @@
             <div histogram class="histogram" id="hist1" data="data.china"></div>
             <div histogram class="histogram" id="hist2" data="data.greece"></div>
             <div histogram class="histogram" id="hist3" data="data.sushis"></div>
+            <div histogram class="histogram" id="hist4" data="data.africa"></div>
+            <div histogram class="histogram" id="hist5" data="data.italy"></div>
         </section>
 
     <!-- Chartbeat -->
