[ch-r] titles on histograms

--- a/chinese-restaurants/index.html
+++ b/chinese-restaurants/index.html
@@ -34,11 +34,11 @@
         <lheader></lheader>
 
         <section class="content">
-            <div histogram class="histogram" id="hist1" data="data.china"></div>
-            <div histogram class="histogram" id="hist2" data="data.greece"></div>
-            <div histogram class="histogram" id="hist3" data="data.sushis"></div>
-            <div histogram class="histogram" id="hist4" data="data.africa"></div>
-            <div histogram class="histogram" id="hist5" data="data.italy"></div>
+            <div histogram class="histogram" id="hist1" title="Test 1" data="data.china"></div>
+            <div histogram class="histogram" id="hist2" title="Test 2" data="data.greece"></div>
+            <div histogram class="histogram" id="hist3" title="Test 3" data="data.sushis"></div>
+            <div histogram class="histogram" id="hist4" title="Test 4" data="data.africa"></div>
+            <div histogram class="histogram" id="hist5" title="Test 5" data="data.italy"></div>
         </section>
 
     <!-- Chartbeat -->
