[pantheon] timeline symbols

--- a/pantheon/index.html
+++ b/pantheon/index.html
@@ -52,7 +52,7 @@
         </section>
 
         <section class="content">
-            <div axis data="data"></div>
+            <div axis data="data" class="axis"></div>
             <div timeline class="timeline" data="data"></div>
         </section>
     <!-- Chartbeat -->
