--- a/pantheon/index.html
+++ b/pantheon/index.html
@@ -5,7 +5,7 @@
 
         <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-animate.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-touch.min.js"></script>
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.min.js"></script>
 
@@ -13,6 +13,8 @@
         <meta name="description" content="Tout savoir sur les dernières actualités politiques, monde, société, sports, écologie avec le journal en ligne Libération.">
         <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
         <meta name="keywords" content="actualités, news">
+
+        <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 
         <script src="js/csvtoarray.js"></script>
 
@@ -37,13 +39,13 @@
         <div ng-if="steps.length > 0">
             <lheader></lheader>
 
-            <section class="cover" ng-style="coverImage">
+            <section class="cover" ng-style="coverImage" ng-swipe-right="prevStep()" ng-swipe-left="nextStep()">
                 <div class="darkfilter"></div>
                 <a href="#" class="nav nav-prev" ng-if="!isFirstStep()" ng-click="prevStep()"><i class="fa fa-angle-left"></i></a>
                 <div class="step" ng-repeat="step in steps" ng-if="$index === currentStep">
                     <h2>0{{ $index + 1 }}.</h2>
                     <h3>{{ step.title }}</h3>
-                    <span class="slug">{{ step.slug }}</span><p ng-bind-html="step.desc"></p>
+                    <p ng-bind-html="step.desc"></p>
                 </div>
                 <ul class="step--bubbles">
                     <li ng-repeat="step in steps">
@@ -72,6 +74,17 @@
             <section class="content">
                 <div axis data="data" class="axis" scrollfix="50"></div>
                 <div timeline class="timeline" data="data"></div>
+            </section>
+
+            <section class="content mobile">
+                <div class="panel panel-default" ng-repeat="person in data" ng-if="!person.filteredOut">
+                    <div class="panel-body">
+                        <h4>{{ person.label }}</h4>
+                        <p>{{ person.birth }} - {{ person.death }}</p>
+                        <p><i class="fa fa-university"></i> {{ person.pantheon }}</p>
+                        <p>{{ person.category }}</p>
+                    </div>
+                </div>
             </section>
         </div>
     <!-- Chartbeat -->
