--- a/pantheon/index.html
+++ b/pantheon/index.html
@@ -63,7 +63,7 @@
                 </div>
             </section>
 
-            <section class="filters hidden-sm hidden-md hidden-lg">
+            <section class="filters hidden-sm hidden-md hidden-lg" scrollfix="50">
                 <div class="filters__wrapper">
                     <select ng-init="$parent.selectedFilter='Tous'" class="form-control" ng-change="selectFilter()" ng-model="$parent.selectedFilter">
                         <option ng-repeat="f in filters" ng-value="f.label">{{ f.label }}</option>
