[pantheon] cover texts on mobile

--- a/pantheon/index.html
+++ b/pantheon/index.html
@@ -45,7 +45,8 @@
                 <div class="step" ng-repeat="step in steps" ng-if="$index === currentStep">
                     <h2>0{{ $index + 1 }}.</h2>
                     <h3>{{ step.title }}</h3>
-                    <p ng-bind-html="step.desc"></p>
+                    <p ng-bind-html="step.desc" class="hidden-xs"></p>
+                    <p ng-bind-html="step.mobileDesc" class="hidden-sm hidden-md hidden-lg"></p>
                 </div>
                 <ul class="step--bubbles">
                     <li ng-repeat="step in steps">
